fixed footer alignments

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,16 +1,17 @@
 body {
 	background: white;
-	margin-top: -30px;
+
 	font-family: Helvetica,Arial,sans-serif;
 }
 
 .header {
-	height: 60px;
+	height: 80px;
 	margin: 0 35px;
 	font-weight: 500;
 	color: gray;
 	font-size: 12px;
 	overflow: hidden;
+
 }
 
 .navset {
@@ -18,7 +19,7 @@ body {
 }
 
 .img-responsive {
-	max-height: 100%;
+	max-height: 80%;
 	width: auto;
 }
 
@@ -27,8 +28,6 @@ body {
 	border-color: #ddd;
 	border-left-style: solid;
 	padding: 20px ;
-	text-align: center;
-
 	height: 100%;
 }
 .lastitem {
@@ -128,9 +127,8 @@ body {
 	border-bottom-style: solid;
 	overflow: hidden;
 
-	float: right;
 	margin-top: 5px;
-	margin-right: 15px;
+	margin-left: 15px;
 	display: inline-block;
 }
 
